--- a/frontend/src/components/New Note/NewNote.module.css
+++ b/frontend/src/components/New Note/NewNote.module.css
@@ -1,53 +1,9 @@
-.form_control {
-    /* border: 2px solid black; */
-    display: flex;
-    flex-direction: column;
-    width: 90%;
-    max-width: 800px;
-    background-color: rgb(49, 49, 49, 0.8);
-    /* color: white; */
-    gap: 1em;
-    padding: 20px 20px;
-    border-radius: 10px;
-}
-
-.input_container {
-    display: flex;
-    flex-direction: column;
-    position: relative;
-}
-
-.input_container input,
-.input_container textarea {
-    /* padding: 20px 20px; */
-    font-size: 1.1rem;
-    padding-top: 28px;
-    padding-bottom: 5px;
-    padding-left: 10px;
-    border-radius: 10px;
-    border: 1px solid rgb(142, 142, 142);
-    resize: vertical;
-}
-
-.input_container input:focus,
-.input_container textarea:focus {
-    outline: none;
-}
-
-.input_container label {
-    position: absolute;
-    color: rgb(142, 142, 142);
-    padding-left: 10px;
-    padding-top: 5px;
-}
-
 .button_container {
-    /* border: 2px solid black; */
     text-align: center;
 }
 
-button {
-    border: none;
+.button_container button {
+    border: 1px solid green;
     padding: 10px 20px;
     background-color: rgb(0, 238, 59);
     width: 150px;
