--- a/frontend/src/components/Notes/NoteList.module.css
+++ b/frontend/src/components/Notes/NoteList.module.css
@@ -1,10 +1,21 @@
 .note_list {
-    /* border: 2px solid black; */
     width: 90%;
-    /* max-width: 1200px; */
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     gap: 1em;
     margin: 20px 0;
+    animation: notes-appear 300ms ease-out forwards;
+}
+
+@keyframes notes-appear {
+    from {
+        opacity: 0;
+        transform: translateY(3rem);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
