--- a/frontend/src/components/Notes/NoteItem.module.css
+++ b/frontend/src/components/Notes/NoteItem.module.css
@@ -51,3 +51,38 @@
     font-size: 1.2rem;
     cursor: pointer;
 }
+
+.form_control {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+}
+
+.input_container {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+}
+
+.input_container input,
+.input_container textarea {
+    font-size: 1.1rem;
+    padding-top: 28px;
+    padding-bottom: 5px;
+    padding-left: 10px;
+    border-radius: 10px;
+    border: 1px solid rgb(142, 142, 142);
+    resize: vertical;
+}
+
+.input_container input:focus,
+.input_container textarea:focus {
+    outline: none;
+}
+
+.input_container label {
+    position: absolute;
+    color: rgb(142, 142, 142);
+    padding-left: 10px;
+    padding-top: 5px;
+}
